--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.3",
     "heroicons": "^2.1.3",
     "heroicons-react": "^1.4.1",
     "jotai": "^2.6.4",
