--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "next": "14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1",
+    "services": "^0.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
