--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.3",
+    "flowbite-react": "^0.7.8",
     "framer-motion": "^11.0.23",
     "heroicons": "^2.1.3",
     "heroicons-react": "^1.4.1",
