--- a/package.json
+++ b/package.json
@@ -23,13 +23,17 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-slick": "^0.30.2",
     "services": "^0.0.3",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.1.1",
     "three": "^0.162.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "@types/three": "^0.162.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
