--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "heroicons": "^2.1.3",
     "heroicons-react": "^1.4.1",
     "jotai": "^2.6.4",
+    "juice": "^10.0.0",
     "next": "14.1.0",
+    "nodemailer": "^6.9.14",
     "react": "^18.2.0",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
@@ -31,6 +33,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-slick": "^0.23.13",
