--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "heroicons-react": "^1.4.1",
     "jotai": "^2.6.4",
     "juice": "^10.0.0",
+    "monsite": "file:",
     "next": "14.1.0",
     "nodemailer": "^6.9.14",
     "react": "^18.2.0",
